--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 *.class
+*.pyc
+bin/
 
+# Only for saving values between runs
+vision/data
+
+JBox2d.log
+*.orig
+*.log
+*~
+*.swp
+JBox2d.log
+res
